fix: Make containers always visible

--- a/themes/quasar/source/css/_grid.styl
+++ b/themes/quasar/source/css/_grid.styl
@@ -21,23 +21,23 @@ html, body
   margin 0 auto
 
   &.xs
-    display flex
+    display flex !important
     max-width $xs
 
   &.sm
-    display flex
+    display flex !important
     max-width $sm
 
   &.md
-    display flex
+    display flex !important
     max-width $md
 
   &.lg
-    display flex
+    display flex !important
     max-width $lg
 
   &.xl
-    display flex
+    display flex !important
     max-width $xl
 
 .qwb-row
